implementa gerenciador de conexao MongoDB com health checks

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ PORT=3000
 REDIS_URL=redis://localhost:6379
 REDIS_PASSWORD=
 
+MONGODB_URL=mongodb://notifications_user:notifications_pass@localhost:27017/notifications
+MONGODB_DIRECT_URL=mongodb://admin:password123@localhost:27017/?authSource=admin
+
 WEBSOCKET_CORS_ORIGIN=http://localhost:3000
 
 PROMETHEUS_METRICS_PORT=9090
