--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "keywords": [
-    "websocket",
-    "redis",
-    "notifications",
-    "realtime"
-  ],
+  "keywords": ["websocket", "redis", "notifications", "realtime"],
   "author": "Seu Nome",
   "license": "MIT",
   "dependencies": {
@@ -24,7 +19,8 @@
     "ioredis": "^5.3.2",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
