--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     networks:
       - notifications-network
 
-  # Nossa aplicação Node.js
+ 
   app:
     build:
       context: .
@@ -50,9 +50,47 @@ services:
     networks:
       - notifications-network
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: notifications-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./docker/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+    networks:
+      - notifications-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: notifications-grafana
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=grafana123
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./docker/grafana-dashboards:/etc/grafana/provisioning/dashboards
+      - ./docker/grafana-datasources:/etc/grafana/provisioning/datasources
+    restart: unless-stopped
+    networks:
+      - notifications-network
+
 volumes:
   redis_data:
   mongodb_data:
+  prometheus_data:
+  grafana_data:
 
 networks:
   notifications-network:
