--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
