cria service para exposicao do sistema de notificacoes

--- a/kubernetes/notification-app.yaml
+++ b/kubernetes/notification-app.yaml
@@ -16,11 +16,29 @@ spec:
       labels:
         app: notification-app
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 2000
       containers:
       - name: notification-app
         image: your-registry/notification-app:latest
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+            - ALL
         ports:
         - containerPort: 3000
         env:
         - name: NODE_ENV
           value: "production"
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
