implementa HPA para scaling automatico baseado em metricas

--- a/kubernetes/notification-app.yaml
+++ b/kubernetes/notification-app.yaml
@@ -42,3 +42,6 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
+        envFrom:
+        - configMapRef:
+            name: notification-config
