--- a/kubernetes/notification-service.yaml
+++ b/kubernetes/notification-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: notification-service
-  namespace: default
+  namespace: notification-system
   labels:
     app: notification-app
     service: notification
