--- a/kubernetes/notification-config.yaml
+++ b/kubernetes/notification-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: notification-config
-  namespace: default
+  namespace: notification-system 
 data:
   NODE_ENV: "production"
   PORT: "3000"
