--- a/kubernetes/mongodb-pvc.yaml
+++ b/kubernetes/mongodb-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongodb-pvc
-  namespace: default
+  namespace: notification-system
   labels:
     app: mongodb
     storage: database
