atualiza deployments do mongodb e redis para namespace notification-system

--- a/kubernetes/mongodb-deployment.yaml
+++ b/kubernetes/mongodb-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb
-  namespace: default
+  namespace: notification-system
   labels:
     app: mongodb
     database: nosql
