--- a/kubernetes/mongodb-service.yaml
+++ b/kubernetes/mongodb-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
-  namespace: default
+  namespace: notification-system
   labels:
     app: mongodb
     service: database
