--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongodb-secrets
-  namespace: default
-type: Opaque
+  namespace: notification-system
 data:
   username: YWRtaW4=  # admin - base64 encoded
   password: cGFzc3dvcmQxMjM=  # password123 - base64 encoded
