aplica security context rigoroso com seccomp e user IDs fixos

--- a/kubernetes/notification-app.yaml
+++ b/kubernetes/notification-app.yaml
@@ -27,9 +27,14 @@ spec:
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          runAsUser: 1000
+          runAsGroup: 1000
           capabilities:
             drop:
             - ALL
+          seccompProfile:
+            type: RuntimeDefault
         ports:
         - containerPort: 3000
         env:
