--- a/kubernetes/mongodb-deployment.yaml
+++ b/kubernetes/mongodb-deployment.yaml
@@ -43,9 +43,16 @@ spec:
             memory: "1Gi"
             cpu: "500m"
         securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: false
           runAsNonRoot: true
           runAsUser: 999
           runAsGroup: 999
+          capabilities:
+            drop:
+            - ALL
+          seccompProfile:
+            type: RuntimeDefault
       volumes:
       - name: mongodb-storage
         persistentVolumeClaim:
