--- a/kubernetes/redis-service.yaml
+++ b/kubernetes/redis-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
-  namespace: default
+  namespace: notification-system
   labels:
     app: redis
     service: cache
