--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -11,7 +11,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: redis-secrets
-  namespace: default
+  namespace: notification-system
 type: Opaque
 data:
   password: cmVkaXNwYXNzMTIz  # redispass123 - base64 encoded
@@ -20,7 +20,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: app-secrets
-  namespace: default
+  namespace: notification-system
 type: Opaque
 data:
   jwt_secret: c3VwZXJzZWNyZXRqd3RrZXkxMjM0NTY=  # supersecretjwtkey123456
