--- a/kubernetes/notification-config.yaml
+++ b/kubernetes/notification-config.yaml
@@ -10,6 +10,7 @@ data:
   LOG_LEVEL: "info"
   REDIS_HOST: "redis-service"
   REDIS_PORT: "6379"
+  REDIS_URL: "redis://redis-service:6379"
   MONGODB_URL: "mongodb://mongodb-service:27017/notifications"
   WEBSOCKET_PORT: "3001"
   RATE_LIMIT_WINDOW_MS: "900000"
