fix(k8s): ajustar Redis/Mongo probes e mounts; melhorar dev flow com kind

--- a/kubernetes/mongodb-deployment.yaml
+++ b/kubernetes/mongodb-deployment.yaml
@@ -34,7 +34,7 @@ spec:
               key: password
         volumeMounts:
         - name: mongodb-storage
-          mountPath: /tmp/mongodb
+          mountPath: /data/db
         resources:
           requests:
             memory: "512Mi"
