--- a/kubernetes/redis-deployment.yaml
+++ b/kubernetes/redis-deployment.yaml
@@ -21,8 +21,8 @@ spec:
         image: redis:7.2-alpine
         ports:
         - containerPort: 6379
-        command: ["redis-server"]
-        args: ["--appendonly", "yes", "--requirepass", "$(REDIS_PASSWORD)"]
+  command: ["redis-server"]
+  args: ["--appendonly", "yes"]
         env:
         - name: REDIS_PASSWORD
           valueFrom:
@@ -51,13 +51,13 @@ spec:
           seccompProfile:
             type: RuntimeDefault
         livenessProbe:
-          exec:
-            command: ["redis-cli", "ping"]
+          tcpSocket:
+            port: 6379
           initialDelaySeconds: 30
           periodSeconds: 10
         readinessProbe:
-          exec:
-            command: ["redis-cli", "ping"]
+          tcpSocket:
+            port: 6379
           initialDelaySeconds: 5
           periodSeconds: 5
       volumes:
