fix(k8s): ajustar manifests para dev-kind, corrigir probes e adicionar script dev-up

--- a/kubernetes/notification-app.yaml
+++ b/kubernetes/notification-app.yaml
@@ -23,7 +23,8 @@ spec:
         fsGroup: 2000
       containers:
       - name: notification-app
-        image: myregistry/realtime-notifications:latest
+        image: realtime-notifications:local
+        imagePullPolicy: IfNotPresent
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: false
