--- a/kubernetes/mongodb-deployment.yaml
+++ b/kubernetes/mongodb-deployment.yaml
@@ -16,6 +16,13 @@ spec:
       labels:
         app: mongodb
     spec:
+      initContainers:
+      - name: init-mongodb-permissions
+        image: busybox:1.36
+        command: ["sh", "-c", "chown -R 999:999 /data/db || true"]
+        volumeMounts:
+        - name: mongodb-storage
+          mountPath: /data/db
       containers:
       - name: mongodb
         image: mongo:6.0
@@ -55,5 +62,4 @@ spec:
             type: RuntimeDefault
       volumes:
       - name: mongodb-storage
-        persistentVolumeClaim:
-          claimName: mongodb-pvc
+        emptyDir: {}
